dagster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dagster-webserver
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Dagster"
    gethomepage.dev/group: "DataOps"
    gethomepage.dev/icon: "https://dagster.io/images/brand/logos/dagster-primary-mark.png"
    gethomepage.dev/ping: "https://dagster.lab.kvd.studio/server_info"
spec:
  rules:
    - host: dagster.lab.kvd.studio
      http:
        paths:
          - backend:
              service:
                name: dagster-dagster-webserver
                port:
                  number: 80
            pathType: Prefix
            path: /
    - host: dagster-ro.lab.kvd.studio
      http:
        paths:
          - backend:
              service:
                name: dagster-dagster-webserver-readonly
                port:
                  number: 80
            pathType: Prefix
            path: /
    - host: dagster-flower.lab.kvd.studio
      http:
        paths:
          - backend:
              service:
                name: dagster-flower-service
                port:
                  number: 5555
            pathType: Prefix
            path: /
